Crash when switching to wireframe on tree_creature blend from the website #64384

Closed
opened 2019-05-09 13:35:42 +02:00 by Mal Duffin · 5 comments
Member

System Information
Operating system: Windows 10
Graphics card: GTX 1070

Blender Version
Broken: 2.80, f877022956, master, 2019-05-09, as found on the splash screen)

Short description of error

Switching to wireframe crashes Blender

Exact steps for others to reproduce the error
Load the .blend file from here...

https://download.blender.org/demo/eevee/tree_creature/tree_creature.blend

Switch to wireframe mode. Blender crashes.

**System Information** Operating system: Windows 10 Graphics card: GTX 1070 **Blender Version** Broken: 2.80, f877022956df, master, 2019-05-09, as found on the splash screen) **Short description of error** Switching to wireframe crashes Blender **Exact steps for others to reproduce the error** Load the .blend file from here... https://download.blender.org/demo/eevee/tree_creature/tree_creature.blend Switch to wireframe mode. Blender crashes.
Author
Member

Added subscriber: @MalDuffin

Added subscriber: @MalDuffin
Clément Foucault self-assigned this 2019-05-09 14:06:45 +02:00

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Author
Member
Smaller file showing issue [tree_creature_wireframe_crash__stuff_removed_2.blend](https://archive.blender.org/developer/F7020877/tree_creature_wireframe_crash__stuff_removed_2.blend)

This issue was referenced by 54ec0559c8

This issue was referenced by 54ec0559c8ef203f2c029fc0e43373538ae5515f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64384
No description provided.