Fix T64384 : Crash when switching to wireframe on tree_creature blend

Was missing NULL pointer check